# fastlin

./: Cargo.toml
src/: analyse_sample.rs  analyse_sample_fasta.rs  analyse_sample_fastq.rs  barcodes.rs  get_barcodes.rs  input_files.rs  main.rs  process_barcodes.rs
