[package]
name = "fastlin"
version = "0.2.5"
edition = "2021"
description = "an ultra-fast program for MTBC lineage typing"
repository = "https://github.com/rderelle/fastlin"
license = "MIT OR Apache-2.0"



[dependencies]
clap = { version = "4.2", features = ["derive"] }
bio-seq = "0.13"
bio-streams = "0.5"
flate2 = "1.0"
ahash = "0.8.3"
indicatif = "0.17"


